# SQLProxy

./: .env.example  .env.staging  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.backend-pr  Dockerfile.optimized  Dockerfile.release  LICENSE  Makefile  README.md  build-info.yaml  deployment.yaml  docker-compose.yml  integration_setup.py  monitoring.yaml  package.json  project_structure.txt  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.py  setup.sh  start.sh
.github/workflows/: backend-ci.yml  cd-helm-deploy.yml  ci.yml  develop.yml  frontend-ci.yml  full-pipeline.yml  infrastructure.yml  main.yml  minimal-tests.yml  optimized-cache.yml  optimized-deployment.yml  optimized-tests.yml  release.yml  simple-test.yml  tests.yml
backend/: .env.example  Dockerfile  Dockerfile.release  main.py  requirements.txt
backend/app/: main.py
backend/app/analytics/: query_analyzer.py
backend/app/api/: admin.py  api.py  approval_workflow.py  auth.py  deps.py  metrics.py  powerbi.py  queries.py  query.py  query_similarity.py  websocket.py
backend/app/audit/: audit_trail.py
backend/app/auth/: api_key.py  jwt.py  ldap.py  policy_engine.py
backend/app/autoscaling/: scaler.py
backend/app/backup/: backup_manager.py  cron_job.py
backend/config/: data_masking_rules.yaml
backend/docs/: openapi.yaml
backend/src/: main.py
backend/tests/: conftest.py
config/: database.json
deploy/: docker-compose.monitoring.yml
deploy/configs/: server_permissions.yaml
deploy/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: DEPLOYMENT_GUIDE.md  LONG_TERM_FEATURES.md  PROJECT_COMPLETION.md  TEST_REPORT.md  api_reference.md  installation.md  orta_vadeli_ozellikler_ozet.md  project_structure.md  user_guide.md
docs/features/: data_masking.md
examples/: ansible_deployment.yml  docker-compose.yml  grafana_dashboard.json  integration_api_example.py  prometheus_config.yml  sql_proxy_alerts.yml
frontend/: .env.example  package.json
frontend/src/: App.jsx  app.tsx  main.tsx
helm/: values.yaml
k8s/: blue-green-deployment.yaml  canary-ingress.yaml  deployment-production.yaml  deployment-staging.yaml
monitoring/: grafana-dashboard.json
scripts/: cache-invalidation.yaml  deploy.sh  redis_management.sh  setup_dev.sh  setup_project.sh  setup_test_env.sh  setup_test_environment.sh
sdks/python/: README.md  setup.py
sqlproxy/: __init__.py
sqlproxy/core/: __init__.py  query_executor.py
sqlproxy/monitoring/: health.py  metrics.py
sqlproxy/performance/: __init__.py  benchmarks.py
sqlproxy/security/: query_security.py
sqlproxy/utils/: __init__.py
src/: main.py
src/api/: routes.py
src/config/: redis_config.py
src/db/: connection_pool.py
src/middleware/: rate_limiter.py
src/security/: auth.py
src/services/: auth_service.py  db_service.py
src/utils/: logger.py
src/validators/: query_validator.py
tests/: __init__.py  conftest.py  doc_generator.py  parallel_config.py  test_query_execution.py
tests/benchmark/: test_benchmarks.py
tests/data/: test_data_manager.py
tests/integration/: test_database_integration.py
tests/load/: test_load_capacity.py
tests/performance/: test_performance_analysis.py  test_performance_analyzer.py  test_query_performance.py
tests/profiling/: test_profiling.py
tests/security/: __init__.py  test_query_security.py
tests/unit/: test_query_executor.py
tests/utils/: __init__.py  test_performance_analyzer.py  test_redis_connection.py
(+361 files in other folders)
