[tool.poetry]
name = "sqlproxy"
version = "0.1.0"
description = "SQL Proxy service for database operations"
authors = ["Teeksss <teeksss@github.com>"]
readme = "README.md"
packages = [{include = "sqlproxy"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.0"
psycopg2-binary = "^2.9.0"
redis = "^4.0.0"
pydantic = "^1.8.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
locust = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.18.0"
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.0"
pytest-benchmark = "^3.4.0"
pytest-xdist = "^2.4.0"
pytest-profiling = "^1.7.0"
memory-profiler = "^0.58.0"
psutil = "^5.8.0"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.910"
pre-commit = "^2.17.0"
bandit = "^1.7.0"
safety = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=sqlproxy"
testpaths = ["tests"]
python_paths = [".", "sqlproxy"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B311"]