[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "sqlproxy"
version = "0.1.0"
description = "SQL Proxy service"
authors = ["Teeksss <teeksss@github.com>"]
readme = "README.md"
packages = [{include = "sqlproxy"}]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
sqlalchemy = "^1.4.0"
redis = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.0"
pytest-mock = "^3.7.0"
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.910"

[tool.pytest.ini_options]
testpaths = ["tests"]