[project]
name = "sqlproxy"
version = "0.1.0"
description = "SQL proxy service for database operations"
authors = [
    {name = "Teeksss", email = "teeksss@github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.10.0",
    "sqlalchemy>=1.4.0",
    "redis>=4.0.0",
    "prometheus-client>=0.16.0",
    "psutil>=5.9.0",
    "psycopg2-binary>=2.9.0",
]

[project.urls]
Repository = "https://github.com/Teeksss/SQLProxy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.0"
pytest-mock = "^3.7.0"
pytest-xdist = "^2.5.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.0"
mypy = "^0.910"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance tests",
    "security: Security tests",
]